# cpp-discere

./: CMakeLists.txt
core/include/Core/: Types.h
engine/: CMakeLists.txt
engine/include/: Renderer.h
engine/include/Engine/: ComponentManager.hpp  ComponentPool.hpp  Engine.h  EntityManager.h  IGame.h  Input.h  InputManager.h  Renderer.h
engine/src/: ComponentManager.cpp  Engine.cpp  EntityManager.cpp  Input.cpp  InputManager.cpp  Renderer.cpp
game/: CMakeLists.txt
game/include/Game/: Components.h  Game.h  RenderSystem.h  TileMap.h  TileRegistry.h  World.h
game/src/: Game.cpp  RenderSystem.cpp  TileMap.cpp  TileRegistry.cpp  World.cpp
src/: main.cpp
